syntax = "proto3";

package pb;

import "clinician.proto";
option go_package = "github.com/ofagbola/Editor-RPM-Backend/authentication/pb";

message CreateClinicianRequest {
    repeated string credentials = 1;
    repeated string specialties  = 2;
    string clinic_name = 3;
    string clinic_id = 4;
    string image = 5;  
    bool accept_patient = 6;
}

message CreateClinicianResponse {
    Clinician clinician = 1;
}  